抽象工厂动态添加产品族